# Karl

./: .gitignore
client/: .dockerignore  Dockerfile.dev  package-lock.json  package.json  vite.config.ts
client/src/: App.css  App.tsx  ThemeContext.ts  index.css  index.tsx  model.ts
client/src/components/: Navbar.tsx  SearchBar.tsx  SearchList.tsx  UrlList.tsx
client/src/components/animations/: TextAnimation.tsx  TitleAnimation.tsx
client/src/pages/: Home.tsx
nginx/: nginx-setup.conf
server/: .dockerignore  Dockerfile.dev  db.sqlite3  docker-entrypoint.sh  manage.py  pyproject.toml
server/api/: gpt.py  models.py  search.py  serializers.py  urls.py  views.py
server/api/migrations/: 0001_initial.py  0002_session_delete_scrapedwebsite.py  0003_rename_task_status_session_status.py  0004_websitepage.py
server/karl/: asgi.py  settings.py  urls.py  wsgi.py
server/scraper/: scrapy.cfg  scrapyd.conf  setup.py
server/scraper/scraper/: items.py  pipelines.py  settings.py
server/scraper/scraper/spiders/: basic_spider.py
