[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Nickolai Tchesnokov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.7"
openai = "^0.26.4"
django = "^4.1.5"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
gunicorn = "^20.1.0"
scrapy = "^2.7.1"
scrapyd = "^1.3.0"
python-scrapyd-api = "^2.1.2"
scrapy-djangoitem = "^1.1.1"
scrapyd-client = {git = "https://github.com/scrapy/scrapyd-client.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
